--- a/Your_very_first_Python_code.ipynb
+++ b/Your_very_first_Python_code.ipynb
@@ -77,10 +77,10 @@
       ],
       "metadata": {
         "id": "tLQh-A7Kt70H",
-        "outputId": "d3a61f1b-1e79-48f9-b034-cf0e8e912424",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d3a61f1b-1e79-48f9-b034-cf0e8e912424"
       },
       "execution_count": 2,
       "outputs": [
@@ -172,28 +172,26 @@
     {
       "cell_type": "code",
       "source": [
-        "# The end argument helps decide when the computer shows the words on the screen.\n",
+        "import time\n",
         "\n",
-        "By default, print() adds a new line (\\n) at the end. This makes the computer show the words right away, like flush=True.\n",
-        "\n",
-        "If you change end=\"\", the computer waits before showing the words. To make it show right away, you use flush=True."
+        "for i in range(5):\n",
+        "    print(i, end=\" \", flush=True)\n",
+        "    time.sleep(1)\n"
       ],
       "metadata": {
-        "id": "TXRXo2bCvaNA",
-        "outputId": "2e7a1aff-1e67-4344-dcc2-dcc90f57bfa5",
+        "id": "DcVJNPzqccrJ",
+        "outputId": "0f32177c-cf60-4efe-afaf-231ffba33098",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-13-0a4c6776c6a3>, line 3)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-0a4c6776c6a3>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    By default, print() adds a new line (\\n) at the end. This makes the computer show the words right away, like flush=True.\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 1 2 3 4 "
           ]
         }
       ]
@@ -203,13 +201,7 @@
       "source": [
         "## Challenges\n",
         "\n",
-        "Waiting to See the Words - Sometimes, the computer does not show the words right away because it waits for more things to print.\n",
-        "\n",
-        "Needing Fast Updates -If you are showing a timer or a loading bar, you want the words to appear right away.\n",
-        "\n",
-        "Forgetting to Use flush=True -If the computer is waiting too long, you may need to tell it to show the words now by using flush=True.\n",
-        "\n",
-        "Changing end Can Confuse - If you change end=\"\", the computer might not show the words until later. You may need to add flush=True to fix this."
+        "Using multiple print() statements - It might have been tricky to type each line separately. Using one print() statement - Remembering to use \\n to make new lines could be confusing. Understanding sep=\".\" -You had to see how the dots (.) connect the numbers instead of spaces. Flush vs. No Flush - Knowing when to use flush=True to show words right away was a bit tricky. Figuring out what makes print flush - Learning that a new line (\\n) helps print right away was new."
       ],
       "metadata": {
         "id": "xQzjxKdvvbyo"
