--- a/Tuples.ipynb
+++ b/Tuples.ipynb
@@ -67,13 +67,53 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here."
+        "# # Method 1: Using separate input statements\n",
+        "a = input(\"Enter the first value: \")\n",
+        "b = input(\"Enter the second value: \")\n",
+        "c = input(\"Enter the third value: \")\n",
+        "d = input(\"Enter the fourth value: \")\n",
+        "e = input(\"Enter the fifth value: \")\n",
+        "\n",
+        "my_tuple = (a, b, c, d, e)\n",
+        "print(\"The tuple is:\", my_tuple)\n",
+        "# Method 1: Using separate input statements\n",
+        "a = input(\"Enter the first value: \")\n",
+        "b = input(\"Enter the second value: \")\n",
+        "c = input(\"Enter the third value: \")\n",
+        "d = input(\"Enter the fourth value: \")\n",
+        "e = input(\"Enter the fifth value: \")\n",
+        "\n",
+        "my_tuple = (a, b, c, d, e)\n",
+        "print(\"The tuple is:\", my_tuple)\n"
       ],
       "metadata": {
-        "id": "rRTflD1C9mjt"
+        "id": "rRTflD1C9mjt",
+        "outputId": "33a44b79-a18f-44a1-a440-6eeb02d862b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the first value: my_tuple\n",
+            "Enter the second value: my_tuple\n",
+            "Enter the third value: my_tuple\n",
+            "Enter the fourth value: my_tuple\n",
+            "Enter the fifth value: my_tuple\n",
+            "The tuple is: ('my_tuple', 'my_tuple', 'my_tuple', 'my_tuple', 'my_tuple')\n",
+            "Enter the first value: my_tuple\n",
+            "Enter the second value: my_tuple\n",
+            "Enter the third value: my_tuple\n",
+            "Enter the fourth value: my_tuple\n",
+            "Enter the fifth value: my_tuple\n",
+            "The tuple is: ('my_tuple', 'my_tuple', 'my_tuple', 'my_tuple', 'my_tuple')\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -87,13 +127,34 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here."
+        "# # Suppose we have a tuple:\n",
+        "my_tuple = (1, 2, 3, 4, 5)\n",
+        "\n",
+        "# Convert to a list to change an element:\n",
+        "temp_list = list(my_tuple)\n",
+        "temp_list[2] = 99  # Change the element at index 2\n",
+        "\n",
+        "# Convert back to a tuple:\n",
+        "my_tuple = tuple(temp_list)\n",
+        "print(my_tuple)  # Output: (1, 2, 99, 4, 5)\n"
       ],
       "metadata": {
-        "id": "8ZIVOfAMQt2Z"
+        "id": "8ZIVOfAMQt2Z",
+        "outputId": "b9482e40-8a03-406b-fca6-530c39a4c35f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(1, 2, 99, 4, 5)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -108,13 +169,39 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here."
+        "#my_tuple = (1,2,3,4,3,2,1,2,3,5,4,3,2,1)\n",
+        "counts = {}\n",
+        "for number in my_tuple:\n",
+        "    if number in counts:\n",
+        "        counts[number] += 1\n",
+        "    else:\n",
+        "        counts[number] = 1\n",
+        "\n",
+        "# Print the repeated integers and their counts\n",
+        "for number, count in counts.items():\n",
+        "    if count > 1:\n",
+        "        print(f\"{number} is repeated {count} times\")\n"
       ],
       "metadata": {
-        "id": "cF0UyMIqQ8V3"
+        "id": "cF0UyMIqQ8V3",
+        "outputId": "0be2cc1d-e494-4ead-c167-a86a26a8cb1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 is repeated 3 times\n",
+            "2 is repeated 4 times\n",
+            "3 is repeated 4 times\n",
+            "4 is repeated 2 times\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -131,13 +218,45 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here."
+        "# # Part c: original tuple\n",
+        "original_tuple = (1, 2, 3, 4, 3, 2, 1, 2, 3, 5, 4, 3, 2, 1)\n",
+        "print(\"Original tuple (Part C):\", original_tuple)\n",
+        "print(\"Length of original tuple:\", len(original_tuple))  # Expected: 14\n",
+        "\n",
+        "# Part d: concatenated tuple\n",
+        "my_tuple = original_tuple + original_tuple\n",
+        "print(\"\\nConcatenated tuple (Part D):\", my_tuple)\n",
+        "print(\"Length of concatenated tuple:\", len(my_tuple))  # Expected: 28\n",
+        "\n",
+        "# Proof that they are different:\n",
+        "if original_tuple != my_tuple:\n",
+        "    print(\"\\nProof: The concatenated tuple is different from the original tuple.\")\n",
+        "else:\n",
+        "    print(\"\\nThe tuples are the same (which should not happen).\")\n"
       ],
       "metadata": {
-        "id": "S5kO371-Q_NL"
+        "id": "S5kO371-Q_NL",
+        "outputId": "ae4618c9-3f94-4074-b676-4acfd6821bb8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original tuple (Part C): (1, 2, 3, 4, 3, 2, 1, 2, 3, 5, 4, 3, 2, 1)\n",
+            "Length of original tuple: 14\n",
+            "\n",
+            "Concatenated tuple (Part D): (1, 2, 3, 4, 3, 2, 1, 2, 3, 5, 4, 3, 2, 1, 1, 2, 3, 4, 3, 2, 1, 2, 3, 5, 4, 3, 2, 1)\n",
+            "Length of concatenated tuple: 28\n",
+            "\n",
+            "Proof: The concatenated tuple is different from the original tuple.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -158,7 +277,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write your response here."
+        "# x.append(1) is like trying to stick a new sticker on the sheet—it’s not allowed.\n",
+        "x[1] = \"hello\" is like trying to change one of the stickers to a different sticker—you can’t do that.\n",
+        "del x[2] is like trying to peel off a sticker—you’re not allowed to remove any sticker."
       ],
       "metadata": {
         "id": "sLoX5Dtt0_rX"
@@ -196,7 +317,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "2a. What is the data type of each variable?"
+        "2a. What is the data type of each variable?\n",
+        "\n",
+        " Python puts the first toy (1) into the box named one, the second toy (2) into the box named two, the third toy (3) into the box named three, and the fourth toy (4) into the box named four.\n",
+        "\n",
+        "It’s just like giving each box its matching toy.\n",
+        "\n"
       ],
       "metadata": {
         "id": "O0-uz6MdzJ4a"
@@ -223,9 +349,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Dkgby1wqzyx8",
-        "outputId": "d759257d-5a49-4c5d-d22d-2b252a62c8ca"
+        "outputId": "2e4d4c4f-a006-4c95-c319-97c2af2d4c7b"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -235,7 +361,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 7
         }
       ]
     },
@@ -251,12 +377,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here."
+        "# a, *b, c = (1, 2, 3, 4)\n"
       ],
       "metadata": {
         "id": "fQr5X9N0RceU"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -273,10 +399,10 @@
         "\n",
         "| Index | my_x | my_x |\n",
         "|   -   |  -   |  -   |\n",
-        "|   0   |   -  |  -   |\n",
-        "|   1   |   -  |  -   |\n",
-        "|   2   |   -  |  -   |\n",
-        "|   3   |   -  |  -   |\n",
+        "|   0   |100     200  -   |\n",
+        "|   1   |200|  300\n",
+        "|   2   | 300  -  |400-   |\n",
+        "|   3   | 400 |  500 |\n",
         "\n"
       ],
       "metadata": {
@@ -297,7 +423,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write your challenges here"
+        "I had a few challenges in this exercise. One challenge was explaining tricky ideas like memory addresses and how Python uses the same “house” (memory) for the same number. It was like trying to tell a story about where numbers live, and I had to choose very simple words so everyone can understand. Another challenge was making sure the explanation was fun and easy, almost like playing with puzzles. I worked hard to make everything clear and friendly, even when the ideas were a bit hard to explain."
       ],
       "metadata": {
         "id": "qfJNpTB5EbY4"
