--- a/Dictionary.ipynb
+++ b/Dictionary.ipynb
@@ -63,15 +63,40 @@
       }
     },
     {
-      "cell_type": "code",
       "source": [
-        "# Write your code here."
+        "my_dictionary = {\n",
+        "\"name\": \"Amgela\",\n",
+        "\"age\": 28,\n",
+        "\"city\": \"New York\",\n",
+        "\"job\": \"Software Engineer\",\n",
+        "\"hobby\": \"Photography\",\n",
+        "\"language\": \"Python\",\n",
+        "\"pet\": \"Dog\",\n",
+        "\"car\": \"Tesla\",\n",
+        "\"country\": \"USA\",\n",
+        "\"food\": \"Steak\"\n",
+        "}\n",
+        "\n",
+        "print(my_dictionary)"
       ],
+      "cell_type": "code",
       "metadata": {
-        "id": "rRTflD1C9mjt"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e86goxr38e1r",
+        "outputId": "eacbcba6-06e2-4a99-e7d8-34f1c7128d8c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'name': 'Amgela', 'age': 28, 'city': 'New York', 'job': 'Software Engineer', 'hobby': 'Photography', 'language': 'Python', 'pet': 'Dog', 'car': 'Tesla', 'country': 'USA', 'food': 'Steak'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -95,35 +120,68 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here."
+        "# my_user_dict = {}\n",
+        "\n",
+        "while True:\n",
+        "    key = input(\"Enter key: \")  # Prompt user for key\n",
+        "    value = input(\"Enter value: \")  # Prompt user for value\n",
+        "    my_user_dict[key] = value  # Store input in dictionary\n",
+        "\n",
+        "    choice = input(\"Do you want to continue (Y/N)? \").strip().upper()\n",
+        "    if choice == 'N':\n",
+        "        break\n",
+        "\n",
+        "print(\"\\nFinal Dictionary:\")\n",
+        "print(my_user_dict)\n",
+        "\n",
+        "# Display the number of keys\n",
+        "print(f\"\\nTotal number of keys entered: {len(my_user_dict)}\")\n"
       ],
       "metadata": {
-        "id": "8ZIVOfAMQt2Z"
+        "id": "8ZIVOfAMQt2Z",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c993fd91-d8c2-4ccd-cd59-308825c6f318"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter key: 1\n",
+            "Enter value: 15\n",
+            "Do you want to continue (Y/N)? n\n",
+            "\n",
+            "Final Dictionary:\n",
+            "{'2': '10', '5': '20', '3': '17', '4': '20', '6': '21', '7': '36', '1': '15'}\n",
+            "\n",
+            "Total number of keys entered: 7\n"
+          ]
+        }
+      ]
     },
     {
-      "cell_type": "code",
       "source": [
-        "# List of tuples where each tuple represents a key-value pair\n",
-        "\n",
-        "a = [(\"a\", 1), (\"b\", 2), (\"c\", 3)]\n",
+        "# a = [(\"a\", 1), (\"b\", 2), (\"c\", 3)]\n",
         "\n",
         "# Convert the list of tuples into a dictionary\n",
-        "\n",
+        "# Remove the '#' to uncomment the line below and define 'a'\n",
+        "a = [(\"a\", 1), (\"b\", 2), (\"c\", 3)]\n",
         "res = dict(a)\n",
         "\n",
         "print(res)"
       ],
+      "cell_type": "code",
       "metadata": {
-        "id": "cF0UyMIqQ8V3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "18bb3632-1eb7-4ca3-8a1e-1833028e49e2"
+        "id": "XQb4f8xN9nqg",
+        "outputId": "6739dc1c-0d19-4317-b940-29c19098e6d4"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,9 +214,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zhseVMcKL-89",
-        "outputId": "ff216241-8243-4743-d5ef-ed629364ab3f"
+        "outputId": "54443353-4387-42f0-b44a-5a39bef6c79f"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,20 +229,40 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 16
         }
       ]
     },
     {
-      "cell_type": "code",
       "source": [
-        "# Write your code here."
+        "my_list = [\n",
+        "    (\"Name\", \"Sarah Connor\"),\n",
+        "    (\"Date of birth\", \"1 Jan 1980\"),\n",
+        "    (\"Address\", \"1000 Black Mountain Drive, 92126\"),\n",
+        "    (\"Name\", \"Jim Hawkins\")\n",
+        "] # Removed the unexpected indentation and add a closing bracket to actually create the list.\n",
+        "\n",
+        "# Now you can work with the my_list variable\n",
+        "print(my_list) #For example print the list"
       ],
+      "cell_type": "code",
       "metadata": {
-        "id": "i8JboXu9AvCV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QVkc7UVS-MIk",
+        "outputId": "97a95804-5a00-4596-be4a-93aa18364e79"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[('Name', 'Sarah Connor'), ('Date of birth', '1 Jan 1980'), ('Address', '1000 Black Mountain Drive, 92126'), ('Name', 'Jim Hawkins')]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -203,7 +281,7 @@
       "metadata": {
         "id": "Nfv-ATQUKlW2"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -239,9 +317,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d4b3d786-0556-4ddf-9dc9-02ce241f1502"
+        "outputId": "fc65ea5e-5e40-4776-daae-d7ac430f1a30"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,13 +343,41 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "# d_orig = {\"Name\": \"Angela\", \"Age\": 30, \"City\": \"New York\"}\n",
+        "\n",
+        "# Create a copy of d_orig\n",
+        "d_copy = d_orig.copy()  # Shallow copy (or use d_copy = copy.deepcopy(d_orig) for a deep copy)\n",
+        "\n",
+        "# Modify d_copy\n",
+        "d_copy[\"Age\"] = 35\n",
+        "d_copy[\"City\"] = \"Los Angeles\"\n",
+        "\n",
+        "# Verify changes\n",
+        "print(\"Original Dictionary:\", d_orig)\n",
+        "print(\"Modified Copy Dictionary:\", d_copy)\n",
+        "\n",
+        "# Ensure d_orig remains unchanged\n",
+        "assert d_orig != d_copy, \"The original dictionary has been modified!\"\n",
+        "\n"
       ],
       "metadata": {
-        "id": "w93b1OeVNYuf"
+        "id": "w93b1OeVNYuf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2ad871ca-9dbf-43f6-910c-05415b06b2b2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original Dictionary: {123: 'Coconut'}\n",
+            "Modified Copy Dictionary: {123: 'Coconut', 'Age': 35, 'City': 'Los Angeles'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -285,13 +391,171 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "# d_orig = {\n",
+        "# \"Name\": \"Angela\",\n",
+        "#     \"Age\": 30,\n",
+        "import copy\n",
+        "# d_orig = {\n",
+        "# \"Name\": \"Angela\",\n",
+        "#     \"Age\": 30,\n",
+        "#     \"City\": \"New York\",\n",
+        "#     \"Hobbies\": [\"Reading\", \"Traveling\"]\n",
+        "# }\n",
+        "d_orig = {\n",
+        "    \"Name\": \"Angela\",\n",
+        "    \"Age\": 30,\n",
+        "    \"City\": \"New York\",\n",
+        "    \"Hobbies\": [\"Reading\", \"Traveling\"]\n",
+        "}\n",
+        "\n",
+        "# Shallow copy (This will cause issues)\n",
+        "d_shallow = d_orig.copy()\n",
+        "\n",
+        "# Modify d_shallow\n",
+        "d_shallow[\"Age\"] = 35\n",
+        "d_shallow[\"City\"] = \"Los Angeles\"\n",
+        "d_shallow[\"Hobbies\"].append(\"Cooking\")  # This change will affect d_orig too!\n",
+        "\n",
+        "# Check if original dictionary is affected\n",
+        "print(\"Original Dictionary (after shallow copy modification):\", d_orig)\n",
+        "print(\"Shallow Copy Dictionary:\", d_shallow)\n",
+        "\n",
+        "# SOLUTION: Use deepcopy to prevent changes in the original dictionary\n",
+        "d_deepcopy = copy.deepcopy(d_orig)\n",
+        "\n",
+        "# Modify deep copy\n",
+        "d_deepcopy[\"Age\"] = 40\n",
+        "d_deepcopy[\"City\"] = \"San Francisco\"\n",
+        "d_deepcopy[\"Hobbies\"].append(\"Swimming\")  # Now this won't affect d_orig\n",
+        "\n",
+        "# Final verification\n",
+        "print(\"\\nOriginal Dictionary (after deep copy modification):\", d_orig)\n",
+        "print(\"Deep Copy Dictionary:\", d_deepcopy)\n",
+        "\n",
+        "assert d_orig != d_deepcopy, \"The original dictionary has been modified!\"\n",
+        "d_shallow = d_orig.copy()\n",
+        "\n",
+        "# Modify d_shallow\n",
+        "d_shallow[\"Age\"] = 35\n",
+        "d_shallow[\"City\"] = \"Los Angeles\"\n",
+        "d_shallow[\"Hobbies\"].append(\"Cooking\")  # This change will affect d_orig too!\n",
+        "\n",
+        "# Check if original dictionary is affected\n",
+        "print(\"Original Dictionary (after shallow copy modification):\", d_orig)\n",
+        "print(\"Shallow Copy Dictionary:\", d_shallow)\n",
+        "\n",
+        "# SOLUTION: Use deepcopy to prevent changes in the original dictionary\n",
+        "d_deepcopy = copy.deepcopy(d_orig)\n",
+        "\n",
+        "# Modify deep copy\n",
+        "d_deepcopy[\"Age\"] = 40\n",
+        "d_deepcopy[\"City\"] = \"San Francisco\"\n",
+        "d_deepcopy[\"Hobbies\"].append(\"Swimming\")  # Now this won't affect d_orig\n",
+        "\n",
+        "# Final verification\n",
+        "print(\"\\nOriginal Dictionary (after deep copy modification):\", d_orig)\n",
+        "print(\"Deep Copy Dictionary:\", d_deepcopy)\n",
+        "\n",
+        "assert d_orig != d_deepcopy, \"The original dictionary has been modified!\"\n",
+        "# d_orig = {\n",
+        "# \"Name\": \"Angela\",\n",
+        "#     \"Age\": 30,\n",
+        "#     \"City\": \"New York\",\n",
+        "#     \"Hobbies\": [\"Reading\", \"Traveling\"]\n",
+        "# }\n",
+        "d_orig = {\n",
+        "    \"Name\": \"Angela\",\n",
+        "    \"Age\": 30,\n",
+        "    \"City\": \"New York\",\n",
+        "    \"Hobbies\": [\"Reading\", \"Traveling\"]\n",
+        "}\n",
+        "\n",
+        "# Shallow copy (This will cause issues)\n",
+        "d_shallow = d_orig.copy()\n",
+        "\n",
+        "# Modify d_shallow\n",
+        "d_shallow[\"Age\"] = 35\n",
+        "d_shallow[\"City\"] = \"Los Angeles\"\n",
+        "d_shallow[\"Hobbies\"].append(\"Cooking\")  # This change will affect d_orig too!\n",
+        "\n",
+        "# Check if original dictionary is affected\n",
+        "print(\"Original Dictionary (after shallow copy modification):\", d_orig)\n",
+        "print(\"Shallow Copy Dictionary:\", d_shallow)\n",
+        "\n",
+        "# SOLUTION: Use deepcopy to prevent changes in the original dictionary\n",
+        "d_deepcopy = copy.deepcopy(d_orig)\n",
+        "\n",
+        "# Modify deep copy\n",
+        "d_deepcopy[\"Age\"] = 40\n",
+        "d_deepcopy[\"City\"] = \"San Francisco\"\n",
+        "d_deepcopy[\"Hobbies\"].append(\"Swimming\")  # Now this won't affect d_orig\n",
+        "\n",
+        "# Final verification\n",
+        "print(\"\\nOriginal Dictionary (after deep copy modification):\", d_orig)\n",
+        "print(\"Deep Copy Dictionary:\", d_deepcopy)\n",
+        "\n",
+        "assert d_orig != d_deepcopy, \"The original dictionary has been modified!\"\n",
+        "d_shallow = d_orig.copy()\n",
+        "\n",
+        "# Modify d_shallow\n",
+        "d_shallow[\"Age\"] = 35\n",
+        "d_shallow[\"City\"] = \"Los Angeles\"\n",
+        "d_shallow[\"Hobbies\"].append(\"Cooking\")  # This change will affect d_orig too!\n",
+        "\n",
+        "# Check if original dictionary is affected\n",
+        "print(\"Original Dictionary (after shallow copy modification):\", d_orig)\n",
+        "print(\"Shallow Copy Dictionary:\", d_shallow)\n",
+        "\n",
+        "# SOLUTION: Use deepcopy to prevent changes in the original dictionary\n",
+        "d_deepcopy = copy.deepcopy(d_orig)\n",
+        "\n",
+        "# Modify deep copy\n",
+        "d_deepcopy[\"Age\"] = 40\n",
+        "d_deepcopy[\"City\"] = \"San Francisco\"\n",
+        "d_deepcopy[\"Hobbies\"].append(\"Swimming\")  # Now this won't affect d_orig\n",
+        "\n",
+        "# Final verification\n",
+        "print(\"\\nOriginal Dictionary (after deep copy modification):\", d_orig)\n",
+        "print(\"Deep Copy Dictionary:\", d_deepcopy)\n",
+        "\n",
+        "assert d_orig != d_deepcopy, \"The original dictionary has been modified!\""
       ],
       "metadata": {
-        "id": "xyS0VVapNvEv"
+        "id": "xyS0VVapNvEv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7277ce2d-919d-42b3-f804-d6135d67310f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Original Dictionary (after shallow copy modification): {'Name': 'Angela', 'Age': 30, 'City': 'New York', 'Hobbies': ['Reading', 'Traveling', 'Cooking']}\n",
+            "Shallow Copy Dictionary: {'Name': 'Angela', 'Age': 35, 'City': 'Los Angeles', 'Hobbies': ['Reading', 'Traveling', 'Cooking']}\n",
+            "\n",
+            "Original Dictionary (after deep copy modification): {'Name': 'Angela', 'Age': 30, 'City': 'New York', 'Hobbies': ['Reading', 'Traveling', 'Cooking']}\n",
+            "Deep Copy Dictionary: {'Name': 'Angela', 'Age': 40, 'City': 'San Francisco', 'Hobbies': ['Reading', 'Traveling', 'Cooking', 'Swimming']}\n",
+            "Original Dictionary (after shallow copy modification): {'Name': 'Angela', 'Age': 30, 'City': 'New York', 'Hobbies': ['Reading', 'Traveling', 'Cooking', 'Cooking']}\n",
+            "Shallow Copy Dictionary: {'Name': 'Angela', 'Age': 35, 'City': 'Los Angeles', 'Hobbies': ['Reading', 'Traveling', 'Cooking', 'Cooking']}\n",
+            "\n",
+            "Original Dictionary (after deep copy modification): {'Name': 'Angela', 'Age': 30, 'City': 'New York', 'Hobbies': ['Reading', 'Traveling', 'Cooking', 'Cooking']}\n",
+            "Deep Copy Dictionary: {'Name': 'Angela', 'Age': 40, 'City': 'San Francisco', 'Hobbies': ['Reading', 'Traveling', 'Cooking', 'Cooking', 'Swimming']}\n",
+            "Original Dictionary (after shallow copy modification): {'Name': 'Angela', 'Age': 30, 'City': 'New York', 'Hobbies': ['Reading', 'Traveling', 'Cooking']}\n",
+            "Shallow Copy Dictionary: {'Name': 'Angela', 'Age': 35, 'City': 'Los Angeles', 'Hobbies': ['Reading', 'Traveling', 'Cooking']}\n",
+            "\n",
+            "Original Dictionary (after deep copy modification): {'Name': 'Angela', 'Age': 30, 'City': 'New York', 'Hobbies': ['Reading', 'Traveling', 'Cooking']}\n",
+            "Deep Copy Dictionary: {'Name': 'Angela', 'Age': 40, 'City': 'San Francisco', 'Hobbies': ['Reading', 'Traveling', 'Cooking', 'Swimming']}\n",
+            "Original Dictionary (after shallow copy modification): {'Name': 'Angela', 'Age': 30, 'City': 'New York', 'Hobbies': ['Reading', 'Traveling', 'Cooking', 'Cooking']}\n",
+            "Shallow Copy Dictionary: {'Name': 'Angela', 'Age': 35, 'City': 'Los Angeles', 'Hobbies': ['Reading', 'Traveling', 'Cooking', 'Cooking']}\n",
+            "\n",
+            "Original Dictionary (after deep copy modification): {'Name': 'Angela', 'Age': 30, 'City': 'New York', 'Hobbies': ['Reading', 'Traveling', 'Cooking', 'Cooking']}\n",
+            "Deep Copy Dictionary: {'Name': 'Angela', 'Age': 40, 'City': 'San Francisco', 'Hobbies': ['Reading', 'Traveling', 'Cooking', 'Cooking', 'Swimming']}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -308,13 +572,29 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here"
+        "## my_dict = {\"name\": \"Angela\", \"age\": 30}\n",
+        "\n",
+        "# Trying to access a dictionary key using parentheses instead of square brackets\n",
+        "#print(my_dictionary(\"name\"))  # Incorrect: Trying to call the dictionary - This line is causing the error\n",
+        "print(my_dictionary[\"name\"])  # Correct: Accessing the value using the key \"name\""
       ],
       "metadata": {
-        "id": "dUoHv95LOCYr"
+        "id": "dUoHv95LOCYr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ea9eecb2-018b-440e-e092-875c560f3abb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Amgela\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -330,7 +610,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write your challenges here"
+        "Problem: You may have used ( ) instead of [ ] to get a value from a dictionary. This causes an error.  If you copy a dictionary using .copy(), changes to the new one might also change the original.\n"
       ],
       "metadata": {
         "id": "qfJNpTB5EbY4"
