--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -81,45 +81,50 @@
     {
       "cell_type": "code",
       "source": [
-        "# Take a non-negative, non-zero integer as input\n",
-        "n = int(input(\"Enter a number: \"))\n",
-        "steps = 0 # Step Counter\n",
+        "## Get input from the user and assign it to the variable 'n'\n",
+        "n = int(input(\"Enter a positive integer: \"))\n",
         "\n",
-        "# Loop until n becomes 1\n",
-        "while n !=1:\n",
-        "    print(n)  # Print current value of n\n",
+        "# Ensure the input is a positive integer\n",
+        "if n <= 0:\n",
+        "    print(\"Please enter a positive integer.\")\n",
+        "else:\n",
+        "    steps = 0  # Step counter\n",
         "\n",
-        "    if n % 2 == 0: # If n is even, divide by 2\n",
-        "        n = n // 2\n",
-        "    else: # If n is odd, apply 3n + 1\n",
-        "        n = 3 * n +1\n",
+        "    # Loop until n becomes 1\n",
+        "    while n != 1:\n",
+        "        print(n)  # Print current value of n\n",
         "\n",
-        "    steps += 1 # Increase stop count\n",
+        "        if n % 2 == 0:  # If n is even, divide by 2\n",
+        "            n //= 2\n",
+        "        else:  # If n is odd, apply 3n + 1\n",
+        "            n = 3 * n + 1\n",
         "\n",
-        "# Print the finalo 1 and step count\n",
-        "print(n)\n",
-        "print(\"steps =\", steps)"
+        "        steps += 1  # Increment step counter\n",
+        "\n",
+        "    # Print the final 1 and total step count\n",
+        "    print(n)\n",
+        "    print(\"Steps =\", steps)\n"
       ],
       "metadata": {
         "id": "5M7ksW8xsC3k",
-        "outputId": "908cedea-8839-4ce5-aebe-6efcfeedc9a1",
+        "outputId": "f072c014-23ad-42e3-984d-af08b5865bd3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a number: 16\n",
+            "Enter a positive integer: 16\n",
             "16\n",
             "8\n",
             "4\n",
             "2\n",
             "1\n",
-            "steps = 4\n"
+            "Steps = 4\n"
           ]
         }
       ]
@@ -136,41 +141,53 @@
     {
       "cell_type": "code",
       "source": [
-        "n = int(input(\"Enter a number:\"))\n",
-        "max_iterations = 100  # Set a maximum number of iterations\n",
-        "iteration_count = 0\n",
+        "# Get input from the user and assign it to the variable 'n'\n",
+        "n = int(input(\"Enter a positive integer: \"))\n",
         "\n",
-        "while iteration_count < max_iterations:  # Loop until max_iterations is reached\n",
-        "    print(n)\n",
-        "    if n % 2 == 0:\n",
-        "        n = n // 2\n",
-        "    else:\n",
-        "        n = 3 * n + 1\n",
+        "# Ensure the input is a positive integer\n",
+        "if n <= 0:\n",
+        "    print(\"Please enter a positive integer.\")\n",
+        "else:\n",
+        "    max_iterations = 100  # Set a maximum number of iterations\n",
+        "    iteration_count = 0  # Initialize the iteration counter\n",
         "\n",
-        "    iteration_count += 1  # Increment the iteration counter\n",
+        "    # Loop until max_iterations is reached or n becomes 1\n",
+        "    while iteration_count < max_iterations:\n",
+        "        print(n)  # Print current value of n\n",
         "\n",
-        "    # Add a condition to break the loop if n becomes 1\n",
-        "    if n == 1:\n",
-        "        break\n",
+        "        if n % 2 == 0:\n",
+        "            n = n // 2  # If n is even, divide by 2\n",
+        "        else:\n",
+        "            n = 3 * n + 1  # If n is odd, apply 3n + 1\n",
         "\n",
-        "print(\"Loop finished after\", iteration_count, \"iterations.\")"
+        "        iteration_count += 1  # Increment the iteration counter\n",
+        "\n",
+        "        # Break the loop if n becomes 1\n",
+        "        if n == 1:\n",
+        "            print(n)  # Print the final value of n (1)\n",
+        "            break\n",
+        "\n",
+        "    print(\"Loop finished after\", iteration_count, \"iterations.\")\n"
       ],
       "metadata": {
         "id": "cs0pk1_qsNY0",
-        "outputId": "3bcb7832-49f7-4cbd-f9d9-59eb49b8a718",
+        "outputId": "3c0e67d2-d413-4803-f38a-06272ae2c1b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a number:2\n",
+            "Enter a positive integer: 1\n",
+            "1\n",
+            "4\n",
             "2\n",
-            "Loop finished after 1 iterations.\n"
+            "1\n",
+            "Loop finished after 3 iterations.\n"
           ]
         }
       ]
@@ -187,144 +204,64 @@
     {
       "cell_type": "code",
       "source": [
-        "# # Get two numbers from the user\n",
-        "num1 = float(input(\"Enter the first number: \"))\n",
-        "num2 = float(input(\"Enter the second number \"))\n",
+        "while True:  # Loop to allow continuous calculations\n",
+        "    # Get two numbers from the user\n",
+        "    num1 = float(input(\"Enter the first number: \"))\n",
+        "    num2 = float(input(\"Enter the second number: \"))\n",
         "\n",
-        "# Ask  for the operation\n",
-        "operation = input(\"choose) an operation (+,-,*,/):\")\n",
+        "    # Ask for the operation\n",
+        "    operation = input(\"Choose an operation (+, -, *, /): \").strip()\n",
         "\n",
-        "# perform the operation\n",
-        "if operation == \"+\":\n",
-        "    result = num1  + num2\n",
-        "elif operation  == \"-\":\n",
-        "     result = num1 - num2\n",
-        "elif operation == \"*\":\n",
-        "     result = num1 * num2\n",
-        "elif operation == \"/\" and num2 !=0:\n",
-        "    result = num1 / num2\n",
-        "# Get two numbers from the user\n",
-        "num1 = float(input(\"Enter the first number: \"))\n",
-        "num2 = float(input(\"Enter the second number: \"))\n",
+        "    # Perform the operation\n",
+        "    if operation == \"+\":\n",
+        "        result = num1 + num2\n",
+        "    elif operation == \"-\":\n",
+        "        result = num1 - num2\n",
+        "    elif operation == \"*\":\n",
+        "        result = num1 * num2\n",
+        "    elif operation == \"/\" and num2 != 0:\n",
+        "        result = num1 / num2\n",
+        "    else:\n",
+        "        print(\"Invalid operation or division by zero.\")\n",
+        "        continue  # Restart the loop if input is invalid\n",
         "\n",
-        "# Ask  for the operation\n",
-        "operation = input(\"choose an operation (+,-,*,/):\")\n",
+        "    # Display the result\n",
+        "    print(\"Result:\", result)\n",
         "\n",
-        "# perform the operation\n",
-        "if operation == \"+\":\n",
-        "    result = num1  + num2\n",
-        "elif operation  == \"-\":\n",
-        "     result = num1 - num2\n",
-        "elif operation == \"*\":\n",
-        "     result = num1 * num2\n",
-        "elif operation == \"/\" and num2 !=0:\n",
-        "    result = num1 / num2\n",
-        "else:\n",
-        "    print (\"Invalid operation or division by zero.\")\n",
-        "    #continue # Restart the loop if input is invalid - this was causing an error as it was outside of a loop\n",
-        "    exit() # Exit the program instead\n",
-        "\n",
-        "# Display the result\n",
-        "print(f\"Result: {result}\")\n",
-        "\n",
-        "#Ask if the user wants to cntinue\n",
-        "choice = input(\"Do you want to continue? (Y/N): \").strip().lower()\n",
-        "if choice !=\"y\":\n",
-        "    print(\"Have a good day.\")\n",
-        "    #break  # Exit the loop - this was causing an error because it was outside a loop\n",
-        "    exit() # Exit the program instead\n",
-        "print(f\"Result: {result}\")\n",
-        "\n",
-        "#Ask if the user wants to cntinue\n",
-        "choice = input(\"Do you want to continue? (Y/N): \").strip().lower()\n",
-        "# Get two numbers from the user\n",
-        "num1 = float(input(\"Enter the first number: \"))\n",
-        "num2 = float(input(\"Enter the second number \"))\n",
-        "\n",
-        "# Ask  for the operation\n",
-        "operation = input(\"choose) an operation (+,-,*,/):\")\n",
-        "\n",
-        "# perform the operation\n",
-        "if operation == \"+\":\n",
-        "    result = num1  + num2\n",
-        "elif operation  == \"-\":\n",
-        "     result = num1 - num2\n",
-        "elif operation == \"*\":\n",
-        "     result = num1 * num2\n",
-        "elif operation == \"/\" and num2 !=0:\n",
-        "    result = num1 / num2\n",
-        "# Get two numbers from the user\n",
-        "num1 = float(input(\"Enter the first number: \"))\n",
-        "num2 = float(input(\"Enter the second number: \"))\n",
-        "\n",
-        "# Ask  for the operation\n",
-        "operation = input(\"choose an operation (+,-,*,/):\")\n",
-        "\n",
-        "# perform the operation\n",
-        "if operation == \"+\":\n",
-        "    result = num1  + num2\n",
-        "elif operation  == \"-\":\n",
-        "     result = num1 - num2\n",
-        "elif operation == \"*\":\n",
-        "     result = num1 * num2\n",
-        "elif operation == \"/\" and num2 !=0:\n",
-        "    result = num1 / num2\n",
-        "else:\n",
-        "    print (\"Invalid operation or division by zero.\")\n",
-        "    #continue # Restart the loop if input is invalid - this was causing an error as it was outside of a loop\n",
-        "    exit() # Exit the program instead\n",
-        "\n",
-        "# Display the result\n",
-        "print(f\"Result: {result}\")\n",
-        "\n",
-        "#Ask if the user wants to cntinue\n",
-        "choice = input(\"Do you want to continue? (Y/N): \").strip().lower()\n",
-        "if choice !=\"y\":\n",
-        "    print(\"Have a good day.\")\n",
-        "    #break  # Exit the loop - this was causing an error because it was outside a loop\n",
-        "    exit() # Exit the program instead\n",
-        "print(f\"Result: {result}\")\n",
-        "\n",
-        "#Ask if the user wants to cntinue\n",
-        "choice = input(\"Do you want to continue? (Y/N): \").strip().lower()\n",
-        "if choice !=\"y\":\n",
-        "    print(\"Have a good day.\")\n",
-        "    'break'  # Exit the loop\n",
-        "    exit()"
+        "    # Ask if the user wants to continue\n",
+        "    choice = input(\"Do you want to continue? (Y/N): \").strip().lower()\n",
+        "    if choice != \"y\":\n",
+        "        print(\"Have a good day.\")\n",
+        "        break  # Exit the loop if user chooses not to continue\n"
       ],
       "metadata": {
         "id": "w9Ai1I_JsYw9",
-        "outputId": "0a6030e9-e543-45fe-9f05-d1a3e226b75d",
+        "outputId": "8d43c4c4-42e1-488e-889f-10bcc04df88f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Enter the first number: 8\n",
-            "Enter the second number 4\n",
-            "choose) an operation (+,-,*,/):+\n",
             "Enter the first number: 10\n",
             "Enter the second number: 2\n",
-            "choose an operation (+,-,*,/):*\n",
-            "Result: 20.0\n",
-            "Do you want to continue? (Y/N): Y\n",
-            "Result: 20.0\n",
-            "Do you want to continue? (Y/N): Y\n",
-            "Enter the first number: 8\n",
-            "Enter the second number 4\n",
-            "choose) an operation (+,-,*,/):+\n",
+            "Choose an operation (+, -, *, /): 4\n",
+            "Invalid operation or division by zero.\n",
             "Enter the first number: 10\n",
             "Enter the second number: 2\n",
-            "choose an operation (+,-,*,/):/\n",
-            "Result: 5.0\n",
-            "Do you want to continue? (Y/N): Y\n",
-            "Result: 5.0\n",
-            "Do you want to continue? (Y/N): Y\n"
+            "Choose an operation (+, -, *, /): -\n",
+            "Result: 8.0\n",
+            "Do you want to continue? (Y/N): y\n",
+            "Enter the first number: 8\n",
+            "Enter the second number: 4\n",
+            "Choose an operation (+, -, *, /): *\n",
+            "Result: 32.0\n",
+            "Do you want to continue? (Y/N): n\n",
+            "Have a good day.\n"
           ]
         }
       ]
@@ -355,55 +292,55 @@
     {
       "cell_type": "code",
       "source": [
-        "# Get input text and convert to lowercase\n",
+        "# # Get input text and convert to lowercase\n",
         "text = input(\"Enter a sentence: \").lower()\n",
         "\n",
-        "# Initialize letter counter dictionary\n",
-        "letter_counts = {}\n",
+        "# Initialize a list to store letter counts (26 elements, one for each letter 'a' to 'z')\n",
+        "letter_counts = [0] * 26\n",
         "\n",
         "# Count letters using a for loop\n",
         "for char in text:\n",
-        "    if char.isalpha():  # Only count letters (ignore spaces & punctuation)\n",
-        "        letter_counts[char] = letter_counts.get(char, 0) + 1\n",
+        "    if 'a' <= char <= 'z':  # Only count letters (ignore spaces & punctuation)\n",
+        "        index = ord(char) - ord('a')  # Convert letter to an index (0 for 'a', 1 for 'b', ..., 25 for 'z')\n",
+        "        letter_counts[index] += 1\n",
         "\n",
-        "# Print total number of letters\n",
-        "total_letters = sum(letter_counts.values())\n",
-        "print(f\"Total number of alphabets: {total_letters}\")\n",
+        "# Calculate the total number of letters\n",
+        "total_letters = 0\n",
+        "for count in letter_counts:\n",
+        "    total_letters += count\n",
+        "\n",
+        "print(\"Total number of alphabets:\", total_letters)\n",
         "\n",
         "# Print individual letter counts\n",
         "print(\"Total number of distinct alphabets are:\")\n",
-        "for letter, count in sorted(letter_counts.items()):\n",
-        "    print(f\"{letter} = {count}\")\n",
-        ""
+        "for i in range(26):  # Loop through each letter index\n",
+        "    if letter_counts[i] > 0:  # Print only letters that appear\n",
+        "        print(chr(i + ord('a')), \"=\", letter_counts[i])\n",
+        "\n"
       ],
       "metadata": {
         "id": "FprfxHfksh2-",
-        "outputId": "005d5306-451a-4e17-df7f-e0a8469c8595",
+        "outputId": "be72d902-17af-48dc-8b16-d929cc623491",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a sentence: To be, or not to be, that is the question \n",
-            "Total number of alphabets: 30\n",
+            "Enter a sentence: hello world\n",
+            "Total number of alphabets: 10\n",
             "Total number of distinct alphabets are:\n",
-            "a = 1\n",
-            "b = 2\n",
-            "e = 4\n",
-            "h = 2\n",
-            "i = 2\n",
-            "n = 2\n",
-            "o = 5\n",
-            "q = 1\n",
+            "d = 1\n",
+            "e = 1\n",
+            "h = 1\n",
+            "l = 3\n",
+            "o = 2\n",
             "r = 1\n",
-            "s = 2\n",
-            "t = 7\n",
-            "u = 1\n"
+            "w = 1\n"
           ]
         }
       ]
