--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -71,18 +71,79 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here."
+        "def get_valid_input():\n",
+        "    while True:\n",
+        "        try:\n",
+        "            value = float(input(\"Enter a numeric value: \"))\n",
+        "            return value\n",
+        "        except ValueError:\n",
+        "            print(\"Invalid input! Please enter a numeric value.\")\n",
+        "\n",
+        "def convert_kpl_to_mpg(num_values):\n",
+        "    KPL_TO_MPG = 2.35215\n",
+        "    print(f\"Enter {num_values} values in kpl:\")\n",
+        "    for _ in range(num_values):\n",
+        "        kpl = get_valid_input()\n",
+        "        mpg = kpl * KPL_TO_MPG\n",
+        "        print(f\"{kpl} kpl = {mpg:.2f} mpg\")\n",
+        "\n",
+        "def convert_mpg_to_kpl(num_values):\n",
+        "    MPG_TO_KPL = 0.425144\n",
+        "    print(f\"Enter {num_values} values in mpg:\")\n",
+        "    for _ in range(num_values):\n",
+        "        mpg = get_valid_input()\n",
+        "        kpl = mpg * MPG_TO_KPL\n",
+        "        print(f\"{mpg} mpg = {kpl:.2f} kpl\")\n"
       ],
       "metadata": {
         "id": "rRTflD1C9mjt"
       },
-      "execution_count": null,
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "source": [
+        "def get_valid_input():\n",
+        "    while True:\n",
+        "        try:\n",
+        "            value = float(input(\"Enter a numeric value: \"))\n",
+        "            return value\n",
+        "        except ValueError:\n",
+        "            print(\"Invalid input! Please enter a numeric value.\")\n",
+        "\n",
+        "def convert_kpl_to_mpg(num_values):\n",
+        "    KPL_TO_MPG = 2.35215\n",
+        "    print(f\"Enter {num_values} values in kpl:\")\n",
+        "    for _ in range(num_values):\n",
+        "        kpl = get_valid_input()\n",
+        "        mpg = kpl * KPL_TO_MPG\n",
+        "        print(f\"{kpl} kpl = {mpg} mpg\")\n",
+        "\n",
+        "def convert_mpg_to_kpl(num_values):\n",
+        "    MPG_TO_KPL = 0.425144\n",
+        "    print(f\"Enter {num_values} values in mpg:\")\n",
+        "    for _ in range(num_values):\n",
+        "        mpg = get_valid_input()\n",
+        "        kpl = mpg * MPG_TO_KPL\n",
+        "        print(f\"{mpg} mpg = {kpl} kpl\")"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "id": "NZjcuPeP1JYP"
+      },
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "1b. How would you write a function that could take any number of unnamed arguments and print their values out in reverse order?\n"
+        "1b. How would you write a function that could take any number of unnamed arguments and print their values out in reverse order? def print_reversed(*args):\n",
+        "    for arg in reversed(args):\n",
+        "        print(arg)\n",
+        "\n",
+        "# Example usage:\n",
+        "print_reversed(1, \"hello\", 3.14, True)\n",
+        "\n"
       ],
       "metadata": {
         "id": "0jkTuRdlA6sk"
@@ -102,12 +163,18 @@
     {
       "cell_type": "code",
       "source": [
-        "# Write your code here."
+        "# def modify_list(my_list):\n",
+        "#   my_list.append(4)\n",
+        "#   my_list[0] = 99\n",
+        "\n",
+        "def modify_dict(my_dict):\n",
+        "    my_dict[\"new_key\"] = \"new_value\"\n",
+        "    my_dict[\"existing_key\"] = \"updated\"\n"
       ],
       "metadata": {
         "id": "8ZIVOfAMQt2Z"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -123,18 +190,32 @@
       "cell_type": "code",
       "source": [
         "x = 5\n",
-        "def funct_1():\n",
-        "  x=3\n",
         "\n",
-        "def funct_2():\n",
-        "  global x\n",
-        "  x=2"
+        "def funct_1():\n",
+        "    x = 10  # Local variable, does not affect global x\n",
+        "    print(x)  # Prints 10 (inside function)\n",
+        "\n",
+        "funct_1()\n",
+        "print(x)  # Still 5 (global x is unchanged)\n"
       ],
       "metadata": {
-        "id": "nvd-xB2v3AYh"
+        "id": "nvd-xB2v3AYh",
+        "outputId": "3c218ce5-4cb8-419a-a2c5-454242159d7f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -157,16 +238,28 @@
     {
       "cell_type": "code",
       "source": [
-        "def my_func(a,b,**c):\n",
-        "  print(c)\n",
+        "def my_func(a, b, *args):  # Use *args to collect extra positional arguments\n",
+        "    print(args)\n",
         "\n",
-        "my_func(1,2,3,4,5,6)"
+        "my_func(1, 2, 3, 4, 5, 6)"
       ],
       "metadata": {
-        "id": "bJzMzbxIsAU9"
+        "id": "bJzMzbxIsAU9",
+        "outputId": "156f52f9-7c84-4695-d330-149a4accee64",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(3, 4, 5, 6)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -181,27 +274,27 @@
       "cell_type": "code",
       "source": [
         "def my_func_global():\n",
-        "  x = 100\n",
+        "    global x  # Now, x refers to the global variable\n",
+        "    x = 100  # Modifies global x\n",
         "\n",
-        "global x\n",
         "x = 10\n",
         "my_func_global()\n",
-        "print(x)"
+        "print(x)  # Output: 100\n"
       ],
       "metadata": {
         "id": "w93b1OeVNYuf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ca0b3182-38f4-4ae1-c163-f713ea7c765d"
+        "outputId": "b5578294-1e72-4b03-d5a3-ad25fa26282f"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10\n"
+            "100\n"
           ]
         }
       ]
@@ -220,7 +313,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write your challenges here"
+        "One challenge you might have faced is understanding the difference between local and global variables. When the function sets x = 100, it only changes x inside the function. The x outside the function, which was set to 10, does not change. This can be confusing because you might expect print(x) to show 100, but it still prints 10.\n",
+        "\n",
+        "Another challenge is knowing how to use the global keyword correctly. If you want to change the value of x everywhere, you need to write global x inside the function before assigning a new value. If you don’t, the function creates a new x instead of changing the one outside.\n",
+        "\n"
       ],
       "metadata": {
         "id": "qfJNpTB5EbY4"
